# MultiDolarVzla

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  dolar_price.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  visualizer.py
docs/: mkdocs.yml
docs/docs/: api-reference.md  index.md  user-guide.md
dolar_price/: base.py
dolar_price/sources/: bcv.py  dolartoday.py  monitordolar.py
modules/: webscrapping.py
modules/config/: DriverConfig.py
modules/sources/: BCV.py  DolarToday.py  MonitorDolar.py  urls.py
src/: example.py
src/DPZ/: dolar_price.py
src/DPZ/sources/: dolartoday.py  monitordolar.py
src/dolar-price-vzla/: dolar_price.py  example.py
src/dolar-price-vzla/sources/: dolartoday.py  monitordolar.py
src/dolar_price_vzla/config/: driver_config.py
src/dolar_price_vzla/sources/: bcv.py
src/pydollar_vzla/: dolar_price.py
src/pydollar_vzla/config/: driver_config.py
src/pydollar_vzla/sources/: bcv.py  dolartoday.py  monitordolar.py  urls.py
