[project]
name = "dolar-price-vzla"
version = "0.1.0"
description = "Obtén el precio del dólar en Venezuela desde múltiples fuentes con una sola línea de código! Nuestra biblioteca proporciona una manera sencilla y poderosa de acceder y manejar los precios del dólar desde diversas fuentes en línea, todo en un único lugar conveniente. Con funciones de webscraping integradas, recopilamos y consolidamos los datos más actualizados para que puedas tomar decisiones informadas sobre tus transacciones financieras en Venezuela. ¡Dile adiós a buscar precios dispersos y hola a una solución completa y fácil de usar con nuestra biblioteca!."
authors = [
  { name = "Antonio Vila", email = "vila.antoniojose@gmail.com"},
]
keywords = [
  "dolar",
  "price",
  "vzla",
  "venezuela",
  "divisa",
]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
license = { file = "LICENS
dependencies =[
    "beautifulsoup4>=4.12.3",
    "requests>=2.31.0",
    "selenium>=4.17.2",
]
